set(SLAR_ION_AND_SCINT_INCLUDE_DIR ${PROJECT_SOURCE_DIR}/include/physics/ion_and_scint)
set(SLAR_ION_AND_SCINT_SOURCE_DIR ${PROJECT_SOURCE_DIR}/src/physics/ion_and_scint)

set(SLAR_ION_AND_SCINT_HEADERS
  "${SLAR_ION_AND_SCINT_INCLUDE_DIR}/SLArLArProperties.hh"
  "${SLAR_ION_AND_SCINT_INCLUDE_DIR}/SLArIonAndScintModel.hh"
  "${SLAR_ION_AND_SCINT_INCLUDE_DIR}/SLArIonAndScintSeparate.hh"
  "${SLAR_ION_AND_SCINT_INCLUDE_DIR}/SLArIonAndScintLArQL.hh"
)

set(SLAR_ION_AND_SCINT_SOURCES
  "${SLAR_ION_AND_SCINT_SOURCE_DIR}/SLArLArProperties.cc"
  "${SLAR_ION_AND_SCINT_SOURCE_DIR}/SLArIonAndScintModel.cc"
  "${SLAR_ION_AND_SCINT_SOURCE_DIR}/SLArIonAndScintSeparate.cc"
  "${SLAR_ION_AND_SCINT_SOURCE_DIR}/SLArIonAndScintLArQL.cc"
)

set(SLAR_PHYSICS_HEADERS ${SLAR_PHYSICS_HEADERS} ${SLAR_ION_AND_SCINT_HEADERS} PARENT_SCOPE)
set(SLAR_PHYSICS_SOURCES ${SLAR_PHYSICS_SOURCES} ${SLAR_ION_AND_SCINT_SOURCES} PARENT_SCOPE)

add_library(SLArIonAndScint
  SHARED
  ${SLAR_ION_AND_SCINT_SOURCES}
  ${SLAR_ION_AND_SCINT_HEADERS}
  )

target_link_libraries(SLArIonAndScint PRIVATE ROOT::Core ${Geant4_LIBRARIES})
target_include_directories(SLArIonAndScint 
  PUBLIC 
  $<BUILD_INTERFACE:${SLAR_ION_AND_SCINT_INCLUDE_DIR}>
  $<INSTALL_INTERFACE:${SLAR_ION_AND_SCINT_INCLUDE_DIR}>
)

#----------------------------------------------------------------------------
# Install instructions
install(TARGETS SLArIonAndScint
  EXPORT                      G4SOLArTargets
  LIBRARY DESTINATION        "${G4SOLAR_LIB_DIR}"
  RUNTIME DESTINATION        "${G4SOLAR_LIB_DIR}")
